Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55030

Combobox does not scroll to selected item

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.7.1
    • 5.7.0
    • Quick: Controls 2
    • None
    • Qt 5.7 release, MacOS latest and iOS 9
    • 4fb88d0f34e030223c75fc8903ef5d8325b649ed

    Description

      The Qt Controls 2 ComboBox component does not scroll down to the selected index when not all items can be displayed on the screen at the same time.

      Steps to reproduce:
      1.) Add as many elements to a ComboBox model so that they do not fit on the screen (the combo box has to be scrolled down).
      2.) Scroll down the combo box, select an item, and close the combo box.
      3.) Open the combo box again. The combo box does not scroll down to the selected item.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            DanielSt Peter Staab
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes